# claude-code-ai-team

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.ps1  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml
defaults/: AI_TEAM_SYNERGY.md  INTEGRATION_CONTRACTS.template.md  LEARNINGS_KB.template.md  ai-team-knowledge.md  feature-map.template.yaml  global-CLAUDE.md  threshold-rules.json  watcher-config.template.json
defaults/contracts/: registry.template.md
defaults/contracts/events/: catalog.template.md
defaults/contracts/shared/: error-codes.template.md  headers.template.md  tenant-rules.template.md
scripts/: update_creds.py
server/: __init__.py  auditor.py  auto_review.py  context_builder.py  control_plane.py  credentials.template.json  decision_learner.py  feature_map.py  finding_analyzer.py  finding_lifecycle.py  memory.py  rag_memory.py  server.py  sessions.py  watcher.py  workflows.py
tests/: smoke_test.sh  test_auto_review.py  test_context_builder.py  test_integration.py  test_memory.py  test_sessions.py
