[project]
name = "multi-ai-collab"
version = "2.0.0"
description = "Bidirectional AI collaboration MCP server for Claude Code + Grok"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes (unused imports, undefined names, etc.)
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax for target Python version)
    "B",     # flake8-bugbear (common bug patterns)
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter, not linter
    "SIM108", # use ternary — readability preference
    "UP015",  # redundant open modes — keep explicit "r" for clarity
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "F811",   # redefined-unused (test helpers reused across functions)
    "B018",   # useless-expression (assert-style tests)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = false        # codebase uses dict[str, Any] pervasively
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["server/"]
